# chatbot

./: .env.example  .gitignore  BACKEND_PERFORMANCE_ARCHITECTURE_AUDIT.md  BACKEND_PRODUCTION_AUDIT.md  BACKEND_PRODUCTION_EVIDENCE_AUDIT.md  CONSOLIDATED_MIGRATION_REPORT.md  LOGGING_AUDIT_REPORT.md  README.md  RUNTIME_AUDIT_REPORT.md  SCHEMA_GAP_REPORT.md  SYSTEM_REPORT.md  docker-compose.test.yml  docker-compose.yml  project_index.json  pyproject.toml  seed_database.py
backend/: Dockerfile  auth.py  main.py  observability.py  pricing_config.py  pyproject.toml  requirements.txt  reset_db.py  settings.py  testing_checklist.md
backend/agent/: constants.py  deterministic.py  graph.py  guardrail.py  llm_client.py  page_context.py  resolve.py  tools.py  v2_routes.py
backend/db/: migrate.py  pool.py  queries.py
backend/db/migrations/: 0001_init.sql  0002_indexes.sql  0002_security.sql  0003_flagged_messages.sql  0003_session_metadata.sql  0004_observability.sql  0004_perf_indexes.sql  0005_lead_intent.sql  0006_perf_indexes_v2.sql  0007_widget_settings.sql  0008_remove_embedding.sql  0009_simplify_widget_settings.sql  0010_security_events.sql  0011_add_security_event_country.sql
backend/leads/: intent.py  scoring.py
backend/llm/: __init__.py  config.py  factory.py  manager.py  provider.py  registry.py  types.py
backend/llm/adapters/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  groq.py  kimi.py  openai.py  openrouter.py
backend/security/: __init__.py  output_scan.py  policy.py  scanner.py  tool_validator.py
backend/static/: demo.html
(+50 files in other folders)
