[project]
name = "backend"
version = "0.1.0"
description = "DegreeBaba AI chatbot backend"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "asyncpg==0.30.0",
    "pgvector==0.3.6",
    "langgraph==0.2.60",
    "langchain-core==0.3.28",
    "langchain-google-genai==2.0.7",
    "google-generativeai==0.8.4",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "openai>=1.55.0",
    "anthropic>=0.42.0",
    "rapidfuzz==3.11.0",
    "slowapi==0.1.9",
    "python-dotenv==1.0.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "httpx==0.28.1",
    "email-validator==2.2.0",
    "langchain-groq>=0.2.2",
    "groq>=0.37.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
